tests/ui/lifetimes/issue-105675.stderr
error: higher-ranked subtype error
  --> $DIR/issue-105675.rs:5:5
   |
LL |     thing(f);
   |     ^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/issue-105675.rs:5:5
   |
LL |     thing(f);
   |     ^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: higher-ranked subtype error
  --> $DIR/issue-105675.rs:9:5
   |
LL |     thing(f);
   |     ^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/issue-105675.rs:9:5
   |
LL |     thing(f);
   |     ^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: higher-ranked subtype error
  --> $DIR/issue-105675.rs:9:5
   |
LL |     thing(f);
   |     ^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: higher-ranked subtype error
  --> $DIR/issue-105675.rs:9:5
   |
LL |     thing(f);
   |     ^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 6 previous errors

